import to digidak legacy cabinet